build: Updating browserslist to 4.16.6
* https://npmjs.com/advisories/1747 (CVE-2021-23364)

Additional changes:
* Updated composer IRC support URL to use Libera Chat (T283273)

Change-Id: I00c34aa20cec9fb021314eae8da464e820cf238b

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	],
 	"support": {
 		"issues": "https://phabricator.wikimedia.org",
-		"irc": "irc://irc.freenode.net/mediawiki",
+		"irc": "irc://irc.libera.chat/mediawiki",
 		"source": "https://gerrit.wikimedia.org/r/p/mediawiki/extensions/ExternalArticles.git"
 	},
 	"require-dev": {
